--- a/.pyup.yml
+++ b/.pyup.yml
@@ -1,1 +1,31 @@
+# configure updates globally
+# default: all
+# allowed: all, insecure, False
+update: insecure
 
+# configure dependency pinning globally
+# default: True
+# allowed: True, False
+pin: True
+
+# set the default branch
+# default: empty, the default branch on GitHub
+branch: beta
+
+# update schedule
+# default: empty
+# allowed: "every day", "every week", ..
+schedule: "every month"
+
+# search for requirement files
+# default: True
+# allowed: True, False
+search: True
+
+# configure the branch prefix the bot is using
+# default: pyup-
+branch_prefix: pyup-
+
+# allow to close stale PRs
+# default: True
+close_prs: True
